syntax = "proto3";
package chat;

message Message{
    string body=1;
    int32 in=2;
    repeated int32 nodisponible=9;
}

message Propuesta{
    int32 id1=1;
    int32 id2=2;
    int32 id3=3;
    repeated int32 l1=4;
    repeated int32 l2=5;
    repeated int32 l3=6;
    repeated int32 pos=7;
    string titulo=8; 
    repeated int32 nodisponible=9;
    int32 in=10;
    string chosendn=11;

}
message Titulos{
    repeated string titulos=1;
}
message Response {
    string info = 1;
    string name = 2;
    int32 elegido = 3;
    uint64 cantidad =4;
    bytes fileChunk = 5;
    
}
message Empty{}

service ChatService{
    rpc SayHello(Response) returns (Message){};
    rpc SayHello2(Message) returns (Message){};
    rpc PedirConfirmacion(Message) returns (Message){};
    rpc GenerarPropuesta(Message) returns (Propuesta){};
    rpc Repartir(Propuesta) returns (Message){};
    rpc SayHello3(Response) returns (Message){};
    rpc EscribirPropuesta(Propuesta) returns(Message){};
    rpc HelperEscribirPropuesta(Propuesta) returns(Message){};
    rpc EscribirPropuestaDis(Propuesta) returns(Message){};
    rpc HelperEscribirPropuestaDis(Propuesta) returns(Message){};
    rpc AgregarTitulo(Message) returns(Message){};
    rpc HelperAgregarTitulo(Message) returns(Message){};
    rpc VerTitulos(Message) returns(Titulos){};
    rpc HelperVerTitulos(Message) returns(Titulos){};
    rpc ObtenerUbicaciones(Message) returns(Titulos){};
    rpc BuscarChunks(Titulos) returns(Message){};
    rpc HacerChunks(Message) returns(Response){};
    rpc Unir(Message) returns(Message){};
    rpc GenerarPropuesta2(Message) returns (Propuesta){};
    rpc PedirConfirmacion2( Propuesta) returns (Message){};
    rpc PedirConfirmacionNM(Propuesta) returns (Message){};
    rpc CambiarRA(Message) returns (Message){};
    rpc ConsultarRA(Message) returns (Message){};

}